# BTViz

./: .gitignore  Bluetooth App.py  README.md  btviz.py  btviz.spec  main.py  pyproject.toml  requirements.txt  test_qasync.py  test_scanchar.py
btviz/: btviz_exceptions.py  config_loader.py  connect_widget.py  display_widget.py  error_handler.py  plot_settings_widget.py  save_thread.py  scan_widget.py  utils.py
output/2026-02-18/: Test1
src/btviz/: config_loader.py  connect_widget.py  display_widget.py  save_thread.py  scan_widget.py  utils.py
test/: test_bleak.py  test_plot.py
