[project]
name = "BTViz"
description = "Bluetooth Visualization for MCUs"
authors = [{name="Xing et al."}]
requires-python = "==3.11.*"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "BTViz.__version__"}

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"