[project]
name = "BTViz"
description = "Bluetooth Visualization for MCUs"
authors = [{name="Xing et al."}]
requires-python = "==3.11.*"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "BTViz.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
btviz = ["data/*.json"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
btviz = "btviz.__main__:main"